@@ -1,24 +1,24 @@
 package com.navi.room.controller;
 
-import com.navi.common.response.ApiResponse;
+import com.navi.room.dto.request.ReserverUpdateRequestDTO;
 import com.navi.room.dto.request.RoomRsvRequestDTO;
 import com.navi.room.dto.response.RoomPreRsvResponseDTO;
 import com.navi.room.dto.response.RoomRsvResponseDTO;
 import com.navi.room.service.RoomRsvService;
-import com.navi.user.dto.auth.UserSecurityDTO;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ResponseEntity;
-import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Map;
 
 @Slf4j
 @RestController
 @RequiredArgsConstructor
 @RequestMapping("/api/room/reserve")
 public class RoomRsvController {
+
     private final RoomRsvService roomRsvService;
 
     /* 결제 전 예약 임시 생성 (재고 선점용) */
@@ -33,19 +33,15 @@ public class RoomRsvController {
         }
 
         try {
-            if (dtoList.size() == 1) {
-                // 단일 객실 예약
-                RoomRsvRequestDTO singleDto = dtoList.getFirst();
-                RoomPreRsvResponseDTO created = roomRsvService.createRoomReservation(singleDto);
-                return ResponseEntity.ok(created);
-            } else {
-                // 다중 객실 예약
-                RoomPreRsvResponseDTO created = roomRsvService.createMultipleRoomReservations(dtoList);
-                return ResponseEntity.ok(created);
-            }
+            RoomPreRsvResponseDTO created =
+                    (dtoList.size() == 1)
+                            ? roomRsvService.createRoomReservation(dtoList.get(0))
+                            : roomRsvService.createMultipleRoomReservations(dtoList);
+
+            return ResponseEntity.ok(created);
 
         } catch (Exception e) {
-            log.error("❌ 예약 생성 중 오류 발생: {}", e.getMessage());
+            log.error("❌ 예약 생성 중 오류 발생", e);
             return ResponseEntity.internalServerError()
                     .body(RoomPreRsvResponseDTO.builder()
                             .success(false)
@@ -54,39 +50,48 @@ public class RoomRsvController {
         }
     }
 
-    /*  결제 완료 후 예약 확정 */
-    @PutMapping("/{reserveId}/confirm")
-    public ResponseEntity<String> confirmReservation(@PathVariable String reserveId) {
-        roomRsvService.updateStatus(reserveId, "PAID");
-        return ResponseEntity.ok("✅ 객실 예약 확정 완료");
+    /* 예약자 정보 업데이트 */
+    @PutMapping("/{reserveId}/reserver")
+    public ResponseEntity<String> updateReserverInfo(
+            @PathVariable String reserveId,
+            @RequestBody ReserverUpdateRequestDTO dto) {
+
+        roomRsvService.updateReserverInfo(reserveId, dto.getReserverName(), dto.getReserverTel(), dto.getReserverEmail());
+        return ResponseEntity.ok("✅ 예약자 정보가 업데이트되었습니다.");
     }
 
-    /*  결제 취소 시 예약 취소 */
+    /* 결제 완료 후 예약 확정 */
+    @PutMapping("/{reserveId}/confirm")
+    public ResponseEntity<Map<String, Object>> confirmReservation(@PathVariable String reserveId) {
+        roomRsvService.updateStatus(reserveId, "PAID");
+        return ResponseEntity.ok(Map.of(
+                "success", true,
+                "status", "PAID",
+                "message", "✅ 객실 예약 확정 완료"
+        ));
+    }
+
+    /* 결제 취소 시 예약 취소 */
     @PutMapping("/{reserveId}/cancel")
-    public ResponseEntity<String> cancelReservation(@PathVariable String reserveId) {
+    public ResponseEntity<Map<String, Object>> cancelReservation(@PathVariable String reserveId) {
         roomRsvService.updateStatus(reserveId, "CANCELLED");
-        return ResponseEntity.ok("❌ 객실 예약 취소 완료");
+        return ResponseEntity.ok(Map.of(
+                "success", true,
+                "status", "CANCELLED",
+                "message", "❌ 객실 예약 취소 완료"
+        ));
     }
 
     /* 사용자별 예약 목록 조회 */
     @GetMapping
-    public ApiResponse<List<RoomRsvResponseDTO>> getReservations(
-            @AuthenticationPrincipal UserSecurityDTO userSecurity) {
-
-        if (userSecurity == null) {
-            throw new IllegalArgumentException("❌ 로그인 정보가 없습니다. 토큰이 만료되었을 수 있습니다.");
-        }
-
-        log.info("🔐 [예약 조회 요청] 토큰 기반 사용자: {}", userSecurity.getId());
-
-        List<RoomRsvResponseDTO> list = roomRsvService.findAllByUserId(userSecurity.getId());
-
-        return ApiResponse.success(list);
+    public ResponseEntity<List<RoomRsvResponseDTO>> getReservations(@RequestParam(required = false) String userId) {
+        return ResponseEntity.ok(roomRsvService.findAllByUserId(userId));
     }
 
     /* 단일 예약 상세 조회 */
     @GetMapping("/{reserveId}")
     public ResponseEntity<RoomRsvResponseDTO> getReservationDetail(@PathVariable String reserveId) {
-        return ResponseEntity.ok(roomRsvService.findByRoomRsvId(reserveId));
+        return ResponseEntity.ok(roomRsvService.findByReserveId(reserveId));
     }
 }
+
